--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 
 body {
   width: 100%;
+  height: 100%;
 }
 
 #header {
@@ -267,7 +268,7 @@ body {
 
 .product-div h3 {
   color: white;
-  width: 100px;
+  width: 80px;
   font-size: 20px;
   font-weight: 800;
   text-decoration: underline;
