--- a/style.css
+++ b/style.css
@@ -16,10 +16,10 @@
   --extra: #caf0f8;
 }
 
-body {
+/* body {
   width: 100%;
   height: 100%;
-}
+} */
 
 #header {
   background-color: #ffffff;
@@ -27,7 +27,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 100%;
+  /* width: 100%; */
 }
 
 .nav {
@@ -75,6 +75,7 @@ body {
   justify-content: center;
   align-items: center;
   padding: 70px;
+  width: 100%;
 }
 
 .hero {
@@ -168,6 +169,7 @@ body {
   justify-content: center;
   align-items: center;
   padding: 70px;
+  width: 100%;
 }
 
 #beneficios h2 {
@@ -225,6 +227,7 @@ body {
   align-items: center;
   padding: 70px;
   gap: 30px;
+  width: 100%;
 }
 
 #productos h2 {
@@ -332,6 +335,7 @@ body {
   background-color: #ffffff;
   border: 2px solid #1d3557;
   padding: 20px;
+  width: 100%;
 }
 
 .contacto {
@@ -416,6 +420,10 @@ body {
 .contacto iframe {
   width: 250px;
   height: 250px;
+}
+
+#footer {
+  width: 100%;
 }
 
 #footer span {
