--- a/style.css
+++ b/style.css
@@ -16,10 +16,9 @@
   --extra: #caf0f8;
 }
 
-/* body {
-  width: 100%;
-  height: 100%;
-} */
+body {
+  width: 100rem;
+}
 
 #header {
   background-color: #ffffff;
@@ -27,7 +26,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  /* width: 100%; */
+  width: 100%;
 }
 
 .nav {
