--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ body {
   border: 2px solid #1d3557;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  width: 100%;
+  justify-content: space-around;
+  /* width: 100%; */
 }
 
 .nav {
@@ -74,7 +74,7 @@ body {
   justify-content: center;
   align-items: center;
   padding: 70px;
-  width: 100%;
+  /* width: 100%; */
 }
 
 .hero {
@@ -168,7 +168,7 @@ body {
   justify-content: center;
   align-items: center;
   padding: 70px;
-  width: 100%;
+  /* width: 100%; */
 }
 
 #beneficios h2 {
@@ -226,7 +226,7 @@ body {
   align-items: center;
   padding: 70px;
   gap: 30px;
-  width: 100%;
+  /* width: 100%; */
 }
 
 #productos h2 {
@@ -334,7 +334,7 @@ body {
   background-color: #ffffff;
   border: 2px solid #1d3557;
   padding: 20px;
-  width: 100%;
+  /* width: 100%; */
 }
 
 .contacto {
@@ -421,9 +421,9 @@ body {
   height: 250px;
 }
 
-#footer {
+/* #footer {
   width: 100%;
-}
+} */
 
 #footer span {
   font-size: 16px;
