--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -411,9 +411,9 @@
   }
 }
 
-@media (min-width: 310px) and (max-width: 576px) {
+@media (min-width: 360px) and (max-width: 576px) {
   body {
-    width: 46rem;
+    width: 80rem;
   }
 
   #header {
@@ -424,7 +424,7 @@
   }
 
   .logo-nav {
-    width: 70px;
+    width: 10%;
   }
 
   .nav-content {
@@ -464,12 +464,16 @@
   }
 
   .caja-img {
-    width: 300px;
-    height: 230px;
+    width: 26rem;
+    height: 16rem;
   }
 
   .main-img {
     gap: 10px;
+  }
+
+  .main-img img {
+    width: 30rem;
   }
 
   .main-img h2 {
@@ -482,8 +486,8 @@
   }
 
   .caja-info {
-    height: 230px;
-    width: 230px;
+    height: 16rem;
+    width: 20rem;
   }
 
   .main-info {
@@ -505,8 +509,8 @@
   }
 
   .caja-about {
-    height: 250px;
-    width: 200px;
+    height: 17rem;
+    width: 15rem;
   }
 
   .about {
@@ -520,7 +524,7 @@
 
   .about-info h3 {
     font-size: 18px;
-    height: 70px;
+    height: 5rem;
   }
 
   .about-info p {
@@ -536,12 +540,12 @@
   }
 
   .product-div {
-    gap: 35px;
+    gap: 5rem;
   }
 
   .caja-product {
-    height: 250px;
-    width: 150px;
+    height: 15rem;
+    width: 10rem;
   }
 
   .product-elementos {
@@ -549,7 +553,7 @@
   }
 
   .product-elementos img {
-    width: 60%;
+    width: 8rem;
   }
 
   .product-elementos h4 {
@@ -569,10 +573,14 @@
     font-size: 12px;
   }
 
+  .contacto {
+    width: 70rem;
+  }
+
   .list-contact {
-    height: 200px;
-    width: 40%;
-    gap: 10px;
+    height: 15rem;
+    width: 20rem;
+    gap: 0.5rem;
   }
 
   .list-contact h2 {
@@ -584,9 +592,9 @@
   }
 
   .list-Redes {
-    height: 200px;
-    width: 40%;
-    gap: 10px;
+    height: 15rem;
+    width: 20rem;
+    gap: 0.5rem;
   }
 
   .list-Redes h2 {
@@ -602,9 +610,9 @@
   }
 
   .contacto iframe {
-    width: 150px;
-    height: 150px;
-    margin-bottom: 80px;
+    width: 12rem;
+    height: 12rem;
+    margin-bottom: 60px;
   }
 
   #footer {
