--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 }
 
 body {
-  width: 100rem;
+  width: 92rem;
 }
 
 #header {
@@ -34,8 +34,7 @@ body {
 }
 
 .logo-nav {
-  width: 100px;
-  margin-left: 40px;
+  width: 5%;
 }
 
 .nav-content {
@@ -104,7 +103,7 @@ body {
   font-size: 40px;
   font-weight: 800;
   text-align: center;
-  height: 100px;
+  height: 5rem;
   color: black;
 }
 
@@ -112,18 +111,18 @@ body {
   color: black;
   font-size: 16px;
   font-weight: 600;
-  width: 85%;
+  width: 100%;
   padding: 40px;
   text-align: center;
 }
 .caja-info {
-  height: 400px;
-  width: 400px;
+  height: 25rem;
+  width: 23rem;
 }
 
 .caja-img {
-  height: 400px;
-  width: 600px;
+  height: 25rem;
+  width: 40rem;
 }
 .main-img {
   display: flex;
@@ -137,13 +136,13 @@ body {
 }
 
 .main-img h2 {
-  font-size: 34px;
+  font-size: 40px;
   font-weight: 800;
   color: black;
   text-align: center;
 }
 .main-img img {
-  width: 90%;
+  width: 35rem;
 }
 
 .main-img a {
@@ -172,22 +171,22 @@ body {
 }
 
 #beneficios h2 {
-  font-size: 24px;
+  font-size: 2rem;
   font-weight: 800;
   color: white;
   text-decoration: underline;
 }
 
 .caja-about {
-  height: 350px;
-  width: 300px;
+  height: 23rem;
+  width: 20rem;
   background-color: var(--extra);
   border: 2px solid #1d3557;
   border-radius: 15px;
 }
 
 .about {
-  margin: 40px;
+  margin: 3rem;
   display: flex;
   /* flex-direction: column; */
   justify-content: center;
@@ -204,9 +203,9 @@ body {
 }
 
 .about-info h3 {
-  font-size: 24px;
+  font-size: 1.5rem;
   font-weight: 800;
-  height: 100px;
+  height: 6rem;
 }
 
 .about-info img {
@@ -230,7 +229,7 @@ body {
 }
 
 #productos h2 {
-  font-size: 34px;
+  font-size: 2rem;
   font-weight: 800;
   color: white;
   text-decoration: underline;
@@ -265,12 +264,12 @@ body {
 
 .product-div {
   display: flex;
-  gap: 100px;
+  gap: 5rem;
 }
 
 .product-div h3 {
   color: white;
-  width: 80px;
+  width: 4.5rem;
   font-size: 20px;
   font-weight: 800;
   text-decoration: underline;
@@ -286,16 +285,16 @@ body {
 }
 
 .caja-product {
-  height: 330px;
-  width: 200px;
+  height: 22rem;
+  width: 13rem;
   background-color: white;
   border: 2px solid #1d3557;
   border-radius: 15px;
 }
 
 .product-elementos img {
-  width: 95%;
-  height: 30%;
+  width: 10rem;
+  height: 6rem;
 }
 
 .product-elementos h4 {
@@ -341,7 +340,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
+  width: 80rem;
   /* padding: 20px; */
 }
 
@@ -350,8 +349,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 300px;
-  width: 40%;
+  height: 10rem;
+  width: 30rem;
   gap: 60px;
 }
 
@@ -364,7 +363,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  height: 150px;
+  height: 10rem;
 }
 
 .list-contact-info li {
@@ -383,8 +382,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 300px;
-  width: 40%;
+  height: 10rem;
+  width: 30rem;
   gap: 60px;
 }
 .list-Redes h2 {
@@ -396,7 +395,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  height: 150px;
+  height: 10rem;
 }
 
 .list-redes-info li {
@@ -412,13 +411,13 @@ body {
 }
 
 .list-redes-info img {
-  width: 30px;
+  width: 1.5rem;
   margin-right: 5px;
 }
 
 .contacto iframe {
-  width: 250px;
-  height: 250px;
+  width: 15rem;
+  height: 15rem;
 }
 
 /* #footer {
