--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -411,9 +411,9 @@
   }
 }
 
-@media (min-width: 360px) and (max-width: 576px) {
+@media (min-width: 320px) and (max-width: 576px) {
   body {
-    width: 80rem;
+    width: 100%;
   }
 
   #header {
@@ -424,7 +424,7 @@
   }
 
   .logo-nav {
-    width: 10%;
+    width: 25%;
   }
 
   .nav-content {
@@ -440,8 +440,13 @@
     gap: 10px;
   }
 
+  .nav-info a {
+    display: none;
+  }
+
   .nav-content a {
-    font-size: 16px;
+    font-size: 12px;
+    /* display: none; */
   }
   .nav-content .user,
   .nav-content .cart {
@@ -458,14 +463,15 @@
 
   .hero {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: flex-start;
     align-items: center;
     gap: 10px;
   }
 
   .caja-img {
-    width: 26rem;
-    height: 16rem;
+    width: 20rem;
+    height: 13rem;
   }
 
   .main-img {
@@ -473,7 +479,7 @@
   }
 
   .main-img img {
-    width: 30rem;
+    width: 15rem;
   }
 
   .main-img h2 {
@@ -486,7 +492,7 @@
   }
 
   .caja-info {
-    height: 16rem;
+    height: 12rem;
     width: 20rem;
   }
 
@@ -504,18 +510,20 @@
   }
 
   #beneficios {
-    padding: 30px;
-    /* width: 150%; */
+    padding: 10%;
+    /* width: 100%; */
+  }
+
+  .other {
+    display: flex;
+    flex-wrap: wrap;
+    width: 70%;
+    gap: 0;
   }
 
   .caja-about {
-    height: 17rem;
-    width: 15rem;
-  }
-
-  .about {
-    padding: 10px;
-    margin: 20px;
+    height: 10rem;
+    width: 10rem;
   }
 
   .about-info {
@@ -523,12 +531,16 @@
   }
 
   .about-info h3 {
-    font-size: 18px;
-    height: 5rem;
+    font-size: 14px;
+    height: 2rem;
   }
 
   .about-info p {
-    font-size: 12px;
+    font-size: 0.7rem;
+  }
+
+  .about-info img {
+    width: 20%;
   }
 
   /* #productos {
@@ -536,91 +548,132 @@
   } */
 
   .product-gral {
-    gap: 40px;
+    /* gap: 40px; */
+  }
+
+  .categories {
+    gap: 4%;
+  }
+
+  .categories li {
+    padding: 3px;
+  }
+
+  .categories li a {
+    font-size: 12px;
+  }
+
+  .product-gral {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* flex-wrap: wrap; */
+    gap: 50px;
+    width: 150%;
   }
 
   .product-div {
-    gap: 5rem;
+    gap: 3%;
+    width: 100%;
+    /* display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr; */
+  }
+
+  .product-div h3 {
+    font-size: 12px;
+    width: 7rem;
   }
 
   .caja-product {
-    height: 15rem;
-    width: 10rem;
+    height: 10rem;
+    width: 7rem;
   }
 
-  .product-elementos {
+  .product {
     gap: 5px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 80%;
   }
 
   .product-elementos img {
-    width: 8rem;
+    width: 70%;
   }
 
   .product-elementos h4 {
-    font-size: 12px;
+    font-size: 9px;
   }
 
   .product-elementos p {
-    font-size: 16px;
+    font-size: 10px;
   }
 
   .product-elementos button {
-    padding: 3px;
-    margin-bottom: 0px;
+    padding: 1px;
+    margin-bottom: 3px;
   }
 
   .product-elementos a {
-    font-size: 12px;
+    font-size: 8px;
   }
 
   .contacto {
-    width: 70rem;
+    width: 70%;
+    gap: 10px;
+    bottom: 0px;
   }
 
   .list-contact {
-    height: 15rem;
-    width: 20rem;
-    gap: 0.5rem;
+    height: 8rem;
+    width: 7rem;
+    gap: 1rem;
   }
 
   .list-contact h2 {
-    font-size: 26px;
+    font-size: 12px;
   }
 
   .list-contact-info a {
-    font-size: 18px;
+    font-size: 8px;
+  }
+
+  .list-contact-info ul {
+    height: 5rem;
   }
 
   .list-Redes {
-    height: 15rem;
-    width: 20rem;
-    gap: 0.5rem;
+    height: 8rem;
+    width: 7rem;
+    gap: 1rem;
   }
 
   .list-Redes h2 {
-    font-size: 26px;
+    font-size: 12px;
+  }
+
+  .list-redes-info ul {
+    height: 5rem;
   }
 
   .list-redes-info a {
-    font-size: 18px;
+    font-size: 8px;
   }
 
   .list-redes-info img {
-    width: 20px;
+    width: 10%;
+    margin-left: 30%;
   }
-
-  .contacto iframe {
-    width: 12rem;
-    height: 12rem;
-    margin-bottom: 60px;
+  iframe {
+    width: 15rem;
+    height: 15rem;
+    margin-bottom: 10%;
   }
 
   #footer {
-    /* width: 150%; */
-    padding: 20px;
+    padding: 10px;
   }
 
   #footer span {
-    font-size: 16px;
+    font-size: 10px;
   }
 }
