--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -205,7 +205,7 @@
   }
 } */
 
-@media (max-width: 768px) {
+@media (min-width: 577px) and (max-width: 768px) {
   body {
     width: 50rem;
   }
@@ -412,10 +412,6 @@
 }
 
 @media (min-width: 320px) and (max-width: 576px) {
-  body {
-    width: 100%;
-  }
-
   #header {
     display: flex;
     justify-content: space-around;
@@ -470,8 +466,8 @@
   }
 
   .caja-img {
-    width: 20rem;
-    height: 13rem;
+    width: 18rem;
+    height: 12rem;
   }
 
   .main-img {
@@ -493,7 +489,7 @@
 
   .caja-info {
     height: 12rem;
-    width: 20rem;
+    width: 18rem;
   }
 
   .main-info {
@@ -531,12 +527,12 @@
   }
 
   .about-info h3 {
-    font-size: 14px;
+    font-size: 12px;
     height: 2rem;
   }
 
   .about-info p {
-    font-size: 0.7rem;
+    font-size: 10px;
   }
 
   .about-info img {
@@ -568,20 +564,18 @@
     justify-content: center;
     align-items: center;
     /* flex-wrap: wrap; */
-    gap: 50px;
-    width: 150%;
+    gap: 40px;
+    width: 100%;
   }
 
   .product-div {
-    gap: 3%;
-    width: 100%;
-    /* display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr; */
+    gap: 20px;
+    /* width: 100%; */
   }
 
   .product-div h3 {
-    font-size: 12px;
-    width: 7rem;
+    font-size: 10px;
+    width: 25%;
   }
 
   .caja-product {
@@ -593,11 +587,11 @@
     gap: 5px;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    width: 80%;
+    /* width: 100%; */
   }
 
   .product-elementos img {
-    width: 70%;
+    width: 60%;
   }
 
   .product-elementos h4 {
@@ -618,7 +612,7 @@
   }
 
   .contacto {
-    width: 70%;
+    width: 90%;
     gap: 10px;
     bottom: 0px;
   }
@@ -664,8 +658,8 @@
     margin-left: 30%;
   }
   iframe {
-    width: 15rem;
-    height: 15rem;
+    width: 12rem;
+    height: 12rem;
     margin-bottom: 10%;
   }
 
