--- a/Login/login.css
+++ b/Login/login.css
@@ -18,9 +18,9 @@ body {
 }
 
 .caja-form {
-  margin-top: 100px;
-  height: 550px;
-  width: 450px;
+  margin-top: 8rem;
+  height: 30rem;
+  width: 30rem;
   background-color: #ffffff;
   border: 2px solid skyblue;
   border-radius: 25px;
@@ -28,7 +28,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 10px;
+  gap: 40px;
 }
 
 .volver-inicio {
@@ -74,9 +74,10 @@ body {
   background-color: #1d3557;
   color: #ffffff;
   width: 70%;
-  height: 35px;
+  height: 5rem;
   margin-bottom: 20px;
   border-radius: 10px;
+  font-size: 18px;
   cursor: pointer;
 }
 
