--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 }
 
 .logo-nav {
-  width: 5%;
+  width: 8%;
 }
 
 .nav-content {
@@ -142,7 +142,7 @@ body {
   text-align: center;
 }
 .main-img img {
-  width: 35rem;
+  width: 25rem;
 }
 
 .main-img a {
@@ -155,7 +155,6 @@ body {
 
 .other {
   display: flex;
-  /* flex-direction: column; */
   justify-content: center;
   align-items: center;
 }
@@ -188,7 +187,6 @@ body {
 .about {
   margin: 3rem;
   display: flex;
-  /* flex-direction: column; */
   justify-content: center;
   align-items: center;
   padding: 40px;
@@ -281,6 +279,7 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
+  gap: 5%;
 }
 
 .product-elementos {
@@ -347,8 +346,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 80rem;
-  /* padding: 20px; */
+  gap: 20px;
 }
 
 .list-contact {
@@ -356,9 +354,10 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 10rem;
+  height: 15rem;
   width: 30rem;
   gap: 60px;
+  margin-top: 5%;
 }
 
 .list-contact h2 {
@@ -389,9 +388,10 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 10rem;
+  height: 15rem;
   width: 30rem;
   gap: 60px;
+  margin-top: 5%;
 }
 .list-Redes h2 {
   font-size: 36px;
@@ -422,15 +422,12 @@ body {
   margin-right: 5px;
 }
 iframe {
-  width: 15rem;
+  width: 25rem;
   height: 15rem;
 }
 
-/* #footer {
-  width: 100%;
-} */
-
 #footer span {
+  margin-top: 2%;
   font-size: 16px;
   font-weight: 400;
 }
