--- a/style.css
+++ b/style.css
@@ -26,7 +26,11 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  /* width: 100%; */
+  height: 110px;
+  width: 100%;
+  position: fixed;
+  top: 0px;
+  z-index: 1;
 }
 
 .nav {
@@ -47,8 +51,19 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 40px 80px;
+  padding: 0px 60px;
+  gap: 10px;
+}
+.nav-info ul {
+  display: flex;
   gap: 30px;
+}
+.nav-info i {
+  font-size: 36px;
+  display: none;
+}
+#toggle-menu {
+  display: none;
 }
 
 .nav-content a {
@@ -74,6 +89,7 @@ body {
   align-items: center;
   padding: 70px;
   /* width: 100%; */
+  margin-top: 105px;
 }
 
 .hero {
@@ -142,7 +158,7 @@ body {
   text-align: center;
 }
 .main-img img {
-  width: 25rem;
+  width: 35rem;
 }
 
 .main-img a {
