--- a/Login/login.css
+++ b/Login/login.css
@@ -84,3 +84,142 @@ body {
 .caja-form p {
   margin-bottom: 15px;
 }
+
+@media (min-width: 320px) and (max-width: 576px) {
+  .caja-form {
+    height: 20rem;
+    width: 15rem;
+    gap: 0px;
+  }
+
+  .formulario {
+    height: 50%;
+    width: 80%;
+    gap: 20px;
+  }
+  .caja-form h1 {
+    font-size: 28px;
+  }
+  .formulario label {
+    font-size: 14px;
+  }
+  .formulario input {
+    font-size: 14px;
+  }
+
+  .input-submit {
+    height: 8%;
+    width: 70%;
+    font-size: 16px;
+  }
+  .caja-form p {
+    font-size: 14px;
+    width: 70%;
+    text-align: center;
+  }
+}
+
+@media (min-width: 577px) and (max-width: 768px) {
+  .caja-form {
+    height: 25rem;
+    width: 25rem;
+    gap: 10px;
+    margin-top: 7rem;
+  }
+
+  .formulario {
+    height: 50%;
+    width: 90%;
+    gap: 40px;
+  }
+  .caja-form h1 {
+    font-size: 32px;
+  }
+  .formulario label {
+    font-size: 16px;
+  }
+  .formulario input {
+    font-size: 16px;
+  }
+
+  .input-submit {
+    height: 8%;
+    width: 70%;
+    font-size: 16px;
+  }
+  .caja-form p {
+    font-size: 16px;
+    width: 70%;
+    text-align: center;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 992px) {
+  .caja-form {
+    height: 30rem;
+    width: 30rem;
+    gap: 20px;
+    margin-top: 5rem;
+  }
+
+  .formulario {
+    height: 50%;
+    width: 90%;
+    gap: 60px;
+  }
+  .caja-form h1 {
+    font-size: 40px;
+  }
+  .formulario label {
+    font-size: 18px;
+  }
+  .formulario input {
+    font-size: 18px;
+  }
+
+  .input-submit {
+    height: 8%;
+    width: 80%;
+    font-size: 18px;
+  }
+  .caja-form p {
+    font-size: 18px;
+    width: 100%;
+    text-align: center;
+  }
+}
+
+@media (min-width: 993px) and (max-width: 1200px) {
+  .caja-form {
+    height: 30rem;
+    width: 30rem;
+    gap: 20px;
+    margin-top: 5rem;
+  }
+
+  .formulario {
+    height: 50%;
+    width: 90%;
+    gap: 60px;
+  }
+  .caja-form h1 {
+    font-size: 40px;
+  }
+  .formulario label {
+    font-size: 18px;
+  }
+  .formulario input {
+    font-size: 18px;
+  }
+
+  .input-submit {
+    height: 8%;
+    width: 80%;
+    font-size: 18px;
+  }
+  .caja-form p {
+    font-size: 18px;
+    width: 100%;
+    text-align: center;
+  }
+}
